Fixed blog link vertical alignment

--- a/_sass/layout/_header.scss
+++ b/_sass/layout/_header.scss
@@ -15,7 +15,6 @@
 			color: inherit;
 			font-weight: _font(weight-bold);
 			letter-spacing: _font(letter-spacing);
-			margin: 0 0 (_size(element-margin) * 1.25) 0;
 			text-decoration: none;
 			text-transform: uppercase;
 			display: inline-block;
